# dr-reco

./: README.md  index.html  package-lock.json  package.json  vite.config.js
src/: app.js  main.js  notify.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/pages/: about.js  amelipro.js  welcome.js  windows.js
