[package]
name = "dr-reco"
version = "0.1.0"
description = "Dr Reco - Logiciel gratuit pour les médecins généralistes"
authors = ["Jean-Baptiste Fron"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.55"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
